--- a/pom.xml
+++ b/pom.xml
@@ -106,6 +106,7 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
+		<finalName> organization-service</finalName>
 	</build>
 	<repositories>
 		<repository>
